# BlaBlaMower

./: CHANGELOG.md  README.md  Release notes.md  TODO.md  pyproject.toml
.github/workflows/: ci_cd.yml
blablamower/: __main__.py
blablamower/core/: __init__.py  config.py  coordinates.py  lawn.py  mower.py  orientation.py
specs/: BlaBlaCar_Technical Test.md
