[tool.poetry]
name = "BlaBlaMower"
version = "0.1.0"
description = ""
authors = ["Guillaume Renard <renardguillaume@gmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.8"


[tool.poetry.group.dev.dependencies]
black = {version = "^22.8.0", allow-prereleases = true}

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
